# OpenCVDNNTest

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp
NeuralNetwork/: CMakeLists.txt  SegmentationNeuralNetwork.cpp  SegmentationNeuralNetwork.h  SegmentationNeuralNetworkImpl.cpp  SegmentationNeuralNetworkImpl.h
models/: UNet4_res_assp_5x5_16k_320x320_e15.json  UNet4_res_assp_5x5_16k_320x320_e15.pb  UNet4_res_assp_5x5_24k_128x128_e09_leaky_relu.json
